# UBASIC-Yuji-KIDA

./: .clippy.toml  Cargo.toml  README.md  TODO.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
examples/: array.bas  flow.bas  hello.bas  math_demo.bas
old_source/: BESSEL.ASM  CALL.ASM  CODE.ASM  COMPILE.ASM  COMPLEX.ASM  EMA32.ASM  EXCOM0.ASM  EXCOM012.ASM  EXCOM1.ASM  EXCOM2.ASM  EXCOM3.ASM  FLOAT.ASM  FORMUL32.ASM  FORMULIN.ASM  FREZMELT.ASM  FUNC.ASM  FUNC123.ASM  FUNC2.ASM  FUNC3.ASM  FUNC387.ASM  FUNC4.ASM  FUNC5.ASM  JUMP.ASM  MAINLP.ASM  MAKEI.BATBAT  MULTI.H  NONINT.ASM  POLYNOMI.ASM  RATFUNC.ASM  RATIONAL.ASM  UB.H  UBCONST7.ASM  UBI.H  UBI32.H  UBINI.ASM  UBV.H  UBV32.H  graph.asm  vga16.asm
src/: console.rs  errors.rs  graphics.rs  interpreter.rs  lib.rs  main.rs  math.rs  memory.rs  parser.rs  types.rs  utils.rs
tests/: integration_tests.rs
