[package]
name = "ubasic-rust"
version = "0.1.0"
edition = "2021"
authors = ["UBASIC Rust Team"]
description = "A modern Rust implementation of UBASIC - Advanced BASIC interpreter with mathematical capabilities"
license = "MIT"
repository = "https://github.com/your-username/ubasic-rust"
keywords = ["basic", "interpreter", "mathematics", "graphics", "scientific-computing"]
categories = ["interpreters", "science", "mathematics"]

[dependencies]
# Core mathematical libraries
rug = "1.24"                    # Arbitrary precision arithmetic
nalgebra = "0.32"               # Linear algebra and matrices
num-traits = "0.2"              # Numeric traits
num-complex = "0.4"             # Complex numbers
num-rational = "0.4"            # Rational numbers

# Parsing and AST
pest = "2.7"                    # PEG parser
pest_derive = "2.7"             # Derive macros for pest
serde = { version = "1.0", features = ["derive"] }  # Serialization

# Console and I/O
rustyline = { version = "12.0", optional = true }   # Interactive console
crossterm = { version = "0.27", optional = true }   # Cross-platform terminal
termion = { version = "2.0", optional = true }      # Terminal manipulation

# Graphics and UI
ggez = { version = "0.9", optional = true }         # 2D graphics
egui = { version = "0.24", optional = true }        # Immediate mode GUI
eframe = { version = "0.24", optional = true }      # Egui framework

# Async and concurrency
tokio = { version = "1.0", features = ["full"], optional = true }
rayon = "1.8"                   # Parallel iterators

# Error handling
thiserror = "1.0"               # Error types
anyhow = "1.0"                  # Error propagation

# Utilities
clap = { version = "4.0", features = ["derive"] }  # Command line parsing
log = "0.4"                     # Logging
env_logger = "0.10"             # Logging implementation
chrono = { version = "0.4", features = ["serde"] } # Date/time

# File handling
walkdir = "2.4"                 # Directory traversal
zip = "0.6"                     # ZIP file support

# Testing
criterion = "0.5"               # Benchmarking

[dev-dependencies]
pretty_assertions = "1.3"       # Better test assertions

[features]
default = ["graphics", "console"]
graphics = ["ggez", "egui", "eframe"]
console = ["rustyline", "crossterm", "termion"]
full = ["graphics", "console", "tokio"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true 